--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,3 +1,11 @@
 @import "bootstrap";
 body { padding-top: 60px; }
 @import "bootstrap-responsive";
+
+[class^="icon-"],
+[class*=" icon-"] {
+background-image: url(“glyphicons-halflings.png”);
+}
+.icon-white {
+background-image: url(“glyphicons-halflings-white.png”);
+}
