--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,13 +1,12 @@
 <%= link_to "Badger", root_path, :class => 'brand' %>
 
-<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-  <span class="icon-bar"></span>
-  <span class="icon-bar"></span>
-  <span class="icon-bar"></span>
-</a>
 
-<div class="nav-collapse collapse">
-  <% if user_signed_in? %>
+<% if user_signed_in? %>
+  <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+    <span class="icon-bar"></span>
+  </a>
+
+  <div class="nav-collapse collapse">
     <ul class="nav">
       <li class="divider-vertical"></li>
       <li>
@@ -16,59 +15,56 @@
         <% end %>
       </li>
     </ul>
-  <% end %>
-  <div class="pull-right">
     <ul class="nav pull-right">
-      <% if user_signed_in? %>
-        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Welcome, <%= current_user.name %> <b class="caret"></b></a>
-          <ul class="dropdown-menu">
+      <li class="dropdown pull-right">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu <b class="caret"></b></a>
+        <ul class="dropdown-menu">
 
-            <% @roles.each do |role| %>
-              <% unless role.name == 'user' or role.name == 'technician' or role.name == 'manager' or role.name == 'admin' %>
-                <li class="dropdown-submenu">
-                  <a tabindex="-1" href="#"><%= role.name.titleize %></a>
-                  <ul class="dropdown-menu">
-                    <li>
-                      <%= link_to(entries_path(company: role.name)) do %>
-                        <i class="icon-list"></i>Entries
-                      <% end %>
-                    </li>
-                    <li>
-                      <%= link_to(invoices_path(company: role.name)) do %>
-                        <i class="icon-briefcase"></i>Invoices
-                      <% end %>
-                    </li>
-                  </ul>
-                </li>
-              <% end %>
-            <% end %>
-
-            <li>
-              <%= link_to(edit_user_registration_path) do %>
-                <i class="icon-cog"></i>Edit account
-              <% end %>
-            </li>
-            <% if current_user.has_role? :admin %>
-              <li>
-                <%= link_to(users_path) do %>
-                  <i class="icon-user"></i>User panel
-                <% end %>
-                <%= link_to(appliances_path) do %>
-                  <i class="icon-file"></i>Appliance panel
-                <% end %>
+          <% @roles.each do |role| %>
+            <% unless role.name == 'user' or role.name == 'technician' or role.name == 'manager' or role.name == 'admin' %>
+              <li class="dropdown-submenu">
+                <a tabindex="-1" href="#"><%= role.name.titleize %></a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <%= link_to(entries_path(company: role.name)) do %>
+                      <i class="icon-list"></i>Entries
+                    <% end %>
+                  </li>
+                  <li>
+                    <%= link_to(invoices_path(company: role.name)) do %>
+                      <i class="icon-briefcase"></i>Invoices
+                    <% end %>
+                  </li>
+                </ul>
               </li>
             <% end %>
-            <li class="divider"></li>
+          <% end %>
+
+          <li>
+            <%= link_to(edit_user_registration_path) do %>
+              <i class="icon-cog"></i>Edit account
+            <% end %>
+          </li>
+          <% if current_user.has_role? :admin %>
             <li>
-              <%= link_to(destroy_user_session_path, :method => 'delete') do %>
-                <i class="icon-off"></i>Logout
+              <%= link_to(users_path) do %>
+                <i class="icon-user"></i>User panel
+              <% end %>
+              <%= link_to(appliances_path) do %>
+                <i class="icon-file"></i>Appliance panel
               <% end %>
             </li>
+          <% end %>
+          <li class="divider"></li>
+          <li>
+            <%= link_to(destroy_user_session_path, :method => 'delete') do %>
+              <i class="icon-off"></i>Logout
+            <% end %>
+          </li>
             
-          </ul>
-        </li>
-      <% end %>
+        </ul>
+      </li>
     </ul>
   </div>
 </div>
-
+<% end %>
