--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,24 +1,17 @@
 <%= link_to "Badger", root_path, :class => 'brand' %>
 
-
 <% if user_signed_in? %>
-  <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-    <span class="icon-bar"></span>
-  </a>
-
-  <div class="nav-collapse collapse">
-    <ul class="nav">
-      <li class="divider-vertical"></li>
-      <li>
-        <%= link_to(root_path) do %>
-          <i class="icon-home"></i>Home
-        <% end %>
-      </li>
-    </ul>
     <ul class="nav pull-right">
       <li class="dropdown pull-right">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu <b class="caret"></b></a>
         <ul class="dropdown-menu">
+
+          <li>
+            <%= link_to(root_path) do %>
+              <i class="icon-home"></i>Home
+            <% end %>
+          </li>
+          <li class="divider"></li>
 
           <% @roles.each do |role| %>
             <% unless role.name == 'user' or role.name == 'technician' or role.name == 'manager' or role.name == 'admin' %>
@@ -40,6 +33,8 @@
             <% end %>
           <% end %>
 
+
+          <li class="divider"></li>
           <li>
             <%= link_to(edit_user_registration_path) do %>
               <i class="icon-cog"></i>Edit account
@@ -65,5 +60,4 @@
         </ul>
       </li>
     </ul>
-  </div>
 <% end %>
