--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -113,7 +113,7 @@
     <%= link_to("Create sticker", sticker_path(@entry), :class => 'btn btn-mini btn-primary') %>
   <% end %>
   <% if current_user.has_role? :technician or current_user.has_role? :manager or current_user.has_role? :admin %>
-    <%= link_to("Edit entry", edit_entry_path(@entry, company: params[:company]), :class => 'btn btn-mini btn-primary') %>4
+    <%= link_to("Edit entry", edit_entry_path(@entry, company: params[:company]), :class => 'btn btn-mini btn-primary') %>
   <% end %>
   <% if current_user.has_role? :manager or current_user.has_role? :admin %>
     <%= link_to("Delete entry", entry_path(@entry, company: params[:company]), :data => { :confirm => "Are you sure?" }, :class => 'btn btn-mini btn-primary', :method => :delete) %>
