--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -12,4 +12,4 @@
   <%= f.primary 'Save invoice', data: { disable_with: 'Saving...' } %>
 <% end %>
 
-<%= link_to "Back", invoices_path %>
+<%= link_to "Back", invoices_path(company: params[:company]) %>
