--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -9,18 +9,15 @@
       <p>
         TVA Service Center<br>
         Twentelaan 2<br>
-        7609RE, Almelo, The Netherlands<br>
+        7609 RE Almelo<br>
+        The Netherlands<br>
         +31 546 851212
       </p>
     </div>
     <div style="width:35%;float:right">
       <strong>Adressee</strong>
       <p>
-        <strong>THIS SHOULD BE COMPANY BASED</strong><br>
-        Maxi-Outlet<br>
-        Meineckestra&szlig;e 22<br>
-        10719, Berlin, Germany<br>
-        +49 30 89758777
+        <%= raw @company_data %>
       </p>
     </div>
   </div>
