--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,4 +23,5 @@
       Can't wait? Contact the admin <a href="mailto:<%= ENV['ADMIN_EMAIL'] %>">here</a>
     <% end %>
   <% end %>
+  <%= image_url("glyphicons-halflings.png") %>
 </div>
