--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,17 +34,23 @@ $grayMediumLight: #eaeaea;
 }
 
 /* give icons some extra margin to the right */
-
 i[class^=icon-] {
   margin-right: 3px;
 }
 
-.center {text-align: center; margin-left: auto; margin-right: auto; margin-bottom: auto; margin-top: auto;}
+.center {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: auto;
+  margin-top: auto;
+}
 
 table h6 {
   margin: 0 !important
 }
 
+/* Copyright footer */
 footer {
   padding-top: 5px
 }
@@ -53,12 +59,18 @@ footer {
   margin-bottom: 0
 }
 
-/* miscellaneous */
+/* Fix bootswatch alert colors
+   Also added a wrapper div in _messages */
+.alert-wrapper{
+  border: 0 !important;
+  padding: 0 !important;
+}
 
-.debug_dump {
-  clear: both;
-  float: left;
-  width: 100%;
-  margin-top: 45px;
-  @include box_sizing;
+/* Invert dropdown-submenu arrow colors
+   so a dark theme displays correctly */
+.dropdown-submenu > a:after {
+  border-left-color: white !important;
+}
+.dropdown-submenu:hover > a:after {
+  border-left-color: #080b0e !important;
 }
